Job list Bottomsheet UI
Set combine job list fragment and solve bottomsheet issue

--- a/app/res/layout/bottomsheet_login_joblist.xml
+++ b/app/res/layout/bottomsheet_login_joblist.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:clipToPadding="true"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -26,8 +27,12 @@
         android:id="@+id/llJobListTabSeparated"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
@@ -61,12 +66,4 @@
             app:layout_constraintTop_toBottomOf="@+id/divider" />
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvJobListApps"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:layout_marginTop="20dp"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
