--- a/app/res/layout/fragment_connect_login_combine_apps.xml
+++ b/app/res/layout/fragment_connect_login_combine_apps.xml
@@ -2,20 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/lytInstallApps"
-        layout="@layout/item_install_commcare_apps"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"/>
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcCommCareApps"
+        android:id="@+id/rcCombineApps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lytInstallApps"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:paddingTop="16dp" />
