--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -161,4 +161,5 @@
     <color name="connect_green">#16A085</color>
     <color name="connect_light_green">#E6F5E5</color>
     <color name="connect_background_color">#f2f5ff</color>
+    <color name="connect_error_color">#EA6944</color>
 </resources>
