--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -7,37 +7,66 @@
         android:orientation="vertical"
         android:layout_marginStart="@dimen/content_start"
         android:layout_marginEnd="@dimen/content_start">
-
+        <ImageView
+            android:id="@+id/company_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_height="32dp"
+            android:layout_marginTop="80dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_dimagi_logo" />
+        <View
+            android:background="@android:color/darker_gray"
+            android:id="@+id/divider"
+            android:layout_below="@+id/company_logo"
+            android:layout_height="1dp"
+            android:layout_marginTop="40dp"
+            android:layout_width="fill_parent" />
     <TextView
         android:id="@+id/connect_password_verify_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_larger"
+        android:textColor="@color/connect_blue_color"
+        android:textSize="@dimen/text_large"
         android:text="@string/connect_password_verify_title"/>
 
     <TextView
         android:id="@+id/connect_password_verify_message"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/connect_subtext"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
-        android:textSize="@dimen/text_medium"
+        android:textSize="@dimen/text_small"
         android:text="@string/connect_password_verify_message"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:passwordToggleEnabled="true">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/connect_password_verify_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/connect_password_verify"/>
-    </com.google.android.material.textfield.TextInputLayout>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+      <ImageView
+          android:layout_width="48dp"
+          android:layout_height="48dp"
+          android:padding="1dp"
+          android:layout_gravity="bottom"
+          android:background="@color/black"
+          android:backgroundTint="@color/connect_light_grey"
+          android:src="@drawable/ic_outline_lock_24"/>
+      <com.google.android.material.textfield.TextInputLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="16dp"
+          app:passwordToggleEnabled="true">
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/connect_password_verify_input"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/login_edit_text"
+              android:inputType="textPassword"
+              android:hint="@string/connect_password_verify"/>
+      </com.google.android.material.textfield.TextInputLayout>
+  </LinearLayout>
 
     <TextView
         android:id="@+id/connect_password_verify_forgot"
@@ -45,15 +74,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
-        android:textSize="@dimen/text_medium"
+        android:textColor="@color/connect_subtext"
+        android:textSize="@dimen/text_small"
         android:text="@string/connect_password_verify_forgot"/>
 
-    <Button
-        android:id="@+id/connect_password_verify_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start"
-        android:text="@string/connect_password_verify_button"/>
+        <org.commcare.views.connect.RoundedButton
+            android:id="@+id/connect_password_verify_button"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="16dp"
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
+            app:roundButtonTextColor="@color/white"
+            android:layout_height="wrap_content"
+            android:text="@string/connect_password_verify_button"
+            />
     </LinearLayout>
 </layout>
