--- a/app/res/layout/fragment_phone_available_bottom_sheet.xml
+++ b/app/res/layout/fragment_phone_available_bottom_sheet.xml
@@ -1,10 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="@color/grey_light"
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="org.commcare.fragments.newConnectId.PhoneAvailableBottomSheet">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:backgroundTint="@color/transparent"
+    tools:context="org.commcare.fragments.connectId.ConnectIdPhoneAvailableBottomSheet">
 
 <LinearLayout
     android:layout_width="match_parent"
@@ -23,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone number is already in Use"
+            android:text="@string/connect_phone_unavailable"
             android:layout_marginLeft="16dp"
             android:textSize="16sp"
             android:fontFamily="@font/roboto_medium"
@@ -57,8 +58,8 @@
             android:id="@+id/back_button"
             android:layout_alignParentLeft="true"
             android:layout_height="40dp"
-            android:layout_margin="16dp"
             android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
@@ -66,20 +67,25 @@
             app:roundButtonBorderColor="@color/border_grey"
             app:roundButtonBorderVisible="true"
             app:roundButtonTextColor="@color/connect_blue_color" />
+
         <org.commcare.views.connect.RoundedButton
             android:gravity="start|center"
-            android:layout_height="40dp"
-            android:layout_margin="16dp"
-            android:layout_alignParentRight="true"
             android:id="@+id/recover_button"
+            android:layout_alignParentRight="true"
+            android:layout_height="40dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:text="Recover"
-            app:roundButtonTextColor="@color/white"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             app:roundButtonBorderRadius="@dimen/dp48"
             app:roundButtonIcon="@drawable/connect_right_arrow"
-            app:roundButtonIconLeftAlign="false"/>
+            app:roundButtonIconLeftAlign="false"
+            app:roundButtonTextColor="@color/white" />
     </RelativeLayout>
 </LinearLayout>
 
 </FrameLayout>
+</layout>
