--- a/app/res/layout/fragment_secondary_phone_number.xml
+++ b/app/res/layout/fragment_secondary_phone_number.xml
@@ -1,13 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout
     android:background="@color/grey_light"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/connect_blue_color"
     android:layout_width="match_parent">
 
     <RelativeLayout
         android:background="@color/white"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:orientation="vertical">
 
@@ -59,7 +62,10 @@
             android:id="@+id/phone_layout"
             android:layout_below="@id/secondary_phone_sub_title"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:orientation="horizontal">
 
@@ -67,15 +73,33 @@
                 android:background="@color/black"
                 android:backgroundTint="@color/connect_light_grey"
                 android:layout_height="48dp"
+                android:layout_gravity="center"
                 android:layout_width="48dp"
                 android:padding="1dp"
                 android:src="@drawable/ic_outline_phone_24" />
 
-            <org.commcare.views.ConnectPhoneInputView
-                android:backgroundTint="@color/white"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_width="match_parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_marginLeft="16dp"
+                    android:id="@+id/countryCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="+91"
+                    android:background="@drawable/login_edit_text"/>
+
+                <AutoCompleteTextView
+                    android:id="@+id/connect_primary_phone_input"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:background="@drawable/login_edit_text"
+                    android:digits="1234567890"
+                    android:focusable="true"
+                    android:hint="0000000"
+                    android:focusableInTouchMode="true"/>
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -104,7 +128,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="16dp"
                 android:layout_alignParentRight="true"
-                android:id="@+id/recover_button"
+                android:id="@+id/continueButton"
                 android:layout_width="wrap_content"
                 android:text="Continue"
                 app:roundButtonTextColor="@color/white"
@@ -116,3 +140,4 @@
     </RelativeLayout>
 
 </FrameLayout>
+</layout>
