--- a/app/res/layout/screen_connect_message.xml
+++ b/app/res/layout/screen_connect_message.xml
@@ -1,43 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent">
     <LinearLayout
+        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/cc_core_bg"
+        android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:layout_marginStart="@dimen/content_start"
-        android:layout_marginEnd="@dimen/content_start">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/connect_message_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/content_min_margin"
-            android:textColor="@color/cc_neutral_color"
+            android:layout_width="wrap_content"
+            android:textColor="@color/connect_subtext"
             android:textSize="@dimen/text_larger" />
 
         <TextView
+            android:gravity="start"
             android:id="@+id/connect_message_message"
-            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/content_min_margin"
-            android:gravity="start"
-            android:textSize="@dimen/text_medium"/>
 
-        <Button
+            android:layout_width="fill_parent"
+            android:textSize="@dimen/text_medium" />
+
+        <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_message_button"
-            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start" />
-        <Button
-            android:id="@+id/connect_message_button2"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:paddingBottom="@dimen/content_start"
             android:paddingTop="@dimen/content_start"
-            android:visibility="gone"/>
+            android:text="Back"
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
+            app:roundButtonTextColor="@color/white" />
+
+        <org.commcare.views.connect.RoundedButton
+            android:id="@+id/connect_message_button2"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="fill_parent"
+            android:paddingBottom="@dimen/content_start"
+            android:visibility="gone"
+            android:paddingTop="@dimen/content_start"
+            android:text="Back"
+            app:roundButtonBackgroundColor="@color/connect_blue_color"
+            app:roundButtonTextColor="@color/white" />
 
     </LinearLayout>
+</FrameLayout>
 </layout>
