--- a/app/res/layout/custom_snack_bar.xml
+++ b/app/res/layout/custom_snack_bar.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginTop="10dp"
     android:paddingHorizontal="15dp"
     android:paddingVertical="10dp">
 
