--- a/app/res/layout/item_install_commcare_apps.xml
+++ b/app/res/layout/item_install_commcare_apps.xml
@@ -26,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:lineSpacingExtra="5dp"
-            android:text="Install new \nCommCare Apps"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -37,7 +37,7 @@
             android:id="@+id/btnInstallNow"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Install"
+            android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
