--- a/app/res/layout/fragment_connect_job_intro.xml
+++ b/app/res/layout/fragment_connect_job_intro.xml
@@ -8,78 +8,176 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_margin="16dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/connect_job_intro_title"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_large"/>
+            android:elevation="5dp"
+            android:padding="16dp"
+            android:layout_margin="4dp"
+            android:outlineAmbientShadowColor="@color/grey_light"
+            app:cardCornerRadius="16dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/connect_job_end_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Complete Project by 01/31/2024"
+                    android:layout_marginTop="20dp"
+                    android:gravity="end"
+                    android:textColor="@color/connect_subtext_color"
+                    android:layout_marginBottom="12dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:textSize="12sp"/>
+            <TextView
+                android:id="@+id/connect_job_intro_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Infant Child Vaccination By Rama"
+                android:textColor="@color/connect_text_color"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="20dp"
+                android:textStyle="bold"
+                android:textSize="16sp"/>
 
-        <TextView
-            android:id="@+id/connect_job_intro_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textAlignment="center"
-            />
+            <TextView
+                android:id="@+id/connect_job_intro_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="Check vaccine status"
+                android:textColor="@color/connect_subtext_color"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="20dp"
+                />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/connect_job_pay_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="100"
+                    android:textColor="@color/connect_blue_color"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginStart="16dp"
+                    />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:text="per visit"
+                        android:textColor="@color/connect_subtext_color"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="20dp"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        <View
-            android:id="@+id/connect_job_intro_divider"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/darker_grey" />
+            android:elevation="5dp"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/connect_blue_color"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/connect_job_intro_learning_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:textAlignment="center"
-            android:text="@string/connect_job_you_will_learn"
-            android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="Learn Details"/>
 
-        <TextView
-            android:id="@+id/connect_job_intro_learning"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
+                <TextView
+                    android:id="@+id/connect_job_intro_learning_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/connect_subtext_color"
+                    android:paddingEnd="20dp"
+                    android:textSize="12sp"
+                    android:text="@string/connect_job_you_will_learn" />
 
-        <TextView
-            android:id="@+id/connect_job_intro_start_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="30dp"
-            android:textStyle="bold"
-            android:text="@string/connect_job_start_training"/>
+                <TextView
+                    android:id="@+id/connect_job_intro_learning"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="20dp"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:elevation="2dp"
+                    android:layout_marginTop="16dp"
+                    android:padding="16dp"
+                    app:cardCornerRadius="24dp"
+                    android:backgroundTint="#353ba6"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:padding="16dp"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/connect_job_intro_start_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:text="@string/connect_learn_start"/>
+                        <TextView
+                            android:id="@+id/connect_job_intro_learning_summary"
+                            android:layout_width="match_parent"
+                            android:textColor="@color/white"
+                            android:layout_marginTop="16dp"
+                            android:textSize="12sp"
+                            android:layout_height="wrap_content"
+                            />
+                    </LinearLayout>
 
-        <TextView
-            android:id="@+id/connect_job_intro_learning_summary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center" />
+                        <org.commcare.views.connect.RoundedButton
+                            android:id="@+id/connect_job_intro_start_button"
+                            android:layout_gravity="center"
+                            android:layout_height="40dp"
+                            android:gravity="center"
+                            android:layout_marginStart="20dp"
+                            android:layout_width="wrap_content"
+                            android:text="Continue"
+                            app:roundButtonIcon="@drawable/connect_right_arrow"
+                            app:roundButtonIconTintColor="@color/connect_blue_color"
+                            app:roundButtonTextColor="@color/connect_blue_color" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/connect_job_intro_start_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </ScrollView>
